<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string-array name="desiredCommitsPeriod">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
	
    <string name="app_name">Mobile Na Massa - Guithub API</string>
	<string name="verifyCommitsOnGithubButtonText">Verify Commits on Github</string>
	<string name="usernameTextViewText">Username:</string>
	<string name="passwordTextViewText">Password:</string>
	<string name="ownerTextViewText">Owner:</string>
	<string name="repositoryTextViewText">Repository:</string>
	<string name="authorTextViewText">Author:</string>
	<string name="usernameEditTextHint">Please, type your Github username</string>
	<string name="passwordEditTextHint">Please, type your Github password</string>
	<string name="ownerEditTextHint">Please, type the repository owner</string>
	<string name="repositoryEditTextHint">Please, type your repository on Github</string>
	<string name="authorEditTextHint">Please, type the commits author</string>
	<string name="saveButtonText">Save</string>
	<string name="incompletedFields">Please, fill the owwer, author, repository and frequency fields.</string>
	<string name="settingsMenu">Settings</string>
	<string name="periodTextViewText">Period:</string>
	<string name="frequencyTextViewText">Frequency on Period:</string>
	<string name="frequencyEditTextHint">Please, type the frequency on selected period</string>
	<string name="noSettingsMessage">"Please, go to the settings menu and fill your Github parameters."</string>
	<string name="periodIllegalArgumentException">The period must be DAILY_PERIOD, WEEKLY_PERIOD or MONTHLY_PERIOD.</string>
	<string name="urlIllegalArgumentException">"None of the fields can be empty."</string>
	<string name="totalCommitsForPeriodTextViewText">"Total Commits for Period"</string>
	<string name="dialogTitle">Message</string>
	<string name="dialogDownload">Downloading commits</string>
	<string name="moreThanCommitsLimit">More commits than the limit!</string>
	<string name="equalsThanCommitsLimit">Number of commits is the same of the limit!</string>
	<string name="lessThanCommitsLimit">Less commits than the limit!</string>
	<string name="connectionError">Connection error, please try again.</string>

</resources>