<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameTextViewText"
        android:visibility="gone">
    </TextView>
    
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/usernameEditTextHint"
        android:text="mnmworkshop"
        android:visibility="gone">
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordTextViewText"
        android:visibility="gone">
    </TextView>
    
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwordEditTextHint"
        android:text="mnm_pass2013"
        android:visibility="gone">
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ownerTextViewText"
        android:visibility="gone">
    </TextView>
    
    <EditText
        android:id="@+id/owner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ownerEditTextHint">
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorTextViewText">
    </TextView>
    
    <EditText
        android:id="@+id/author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/authorEditTextHint">
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repositoryTextViewText">
    </TextView>
    
    <EditText
        android:id="@+id/respository"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/repositoryEditTextHint">
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodTextViewText">
    </TextView>
    
    <Spinner
        android:id="@+id/period"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/desiredCommitsPeriod">"
    </Spinner>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequencyTextViewText">
    </TextView>
    
    <EditText
        android:id="@+id/frequency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/frequencyEditTextHint">
    </EditText>
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonText"
        android:onClick="save">
    </Button>    

</LinearLayout>